--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,600;0,700;0,800;0,900;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+    font-family: "Roboto", sans-serif;
+}
+
 .active {
     background-color: #e2e8f0;
+    color: #6495ed;
     width: 100%;
 }
